finish bike status

--- a/vg-stats/vg-stats.ipynb
+++ b/vg-stats/vg-stats.ipynb
@@ -2065,7 +2065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "id": "026879d5-8e43-44d9-a68a-5683f92e7eb0",
    "metadata": {},
    "outputs": [
@@ -2095,7 +2095,7 @@
     "        assert_equal(the_median, 0.08)\n",
     "        \n",
     "        assert_equal(fifa_data.iloc[0].Platform, 'PS3')\n",
-    "        assert_equal(median_ten_game.iloc[0].Platform, 'PS3')\n",
+    "        assert_equal(median_ten_game.iloc[0].Name, 'Dragon Warrior IV')\n",
     "        \n",
     "\n",
     "    print(\"Success!!!\")\n",
